include/maplibre_native_c/map.h

/** Debug overlay mask values for mln_map_set_debug_options(). */
typedef enum mln_map_debug_option : uint32_t {
  MLN_MAP_DEBUG_TILE_BORDERS = 1U << 1U,
  MLN_MAP_DEBUG_PARSE_STATUS = 1U << 2U,
  MLN_MAP_DEBUG_TIMESTAMPS = 1U << 3U,
  MLN_MAP_DEBUG_COLLISION = 1U << 4U,
  MLN_MAP_DEBUG_OVERDRAW = 1U << 5U,
  MLN_MAP_DEBUG_STENCIL_CLIP = 1U << 6U,
  MLN_MAP_DEBUG_DEPTH_BUFFER = 1U << 7U,
} mln_map_debug_option;
/** Map rendering modes used when creating a map. */
typedef enum mln_map_mode : uint32_t {
  /** Continuously updates as data arrives and map state changes. */
  MLN_MAP_MODE_CONTINUOUS = 0,
  /** Produces one-off still images of an arbitrary viewport. */
  MLN_MAP_MODE_STATIC = 1,
  /** Produces one-off still images for a single tile. */
  MLN_MAP_MODE_TILE = 2,
} mln_map_mode;
/** Options used when creating a map. */
typedef struct mln_map_options {
  uint32_t size;
  /**
   * Initial logical map width in UI pixels. Must be positive.
   *
   * Attaching a render session replaces this with the render target extent, and
   * mln_render_session_resize() replaces it again. Until the first attach it is
   * the viewport that camera and projection queries such as
   * mln_map_camera_for_lat_lng_bounds() and mln_map_pixel_for_lat_lng() are
   * answered against.
   */
  uint32_t width;
  /** Initial logical map height in UI pixels. See width. */
  uint32_t height;
  /**
   * UI-to-device pixel scale. Must be positive and finite.
   *
   * Unlike width and height, this is fixed for the lifetime of the map and
   * selects sprites, glyphs, and raster tiles for every frame the map renders.
   * Render targets carry their own scale factor for geometry and shaders, so
   * create the map with the scale factor you intend to render at. A render
   * session attached or resized with a different scale factor logs a warning
   * and renders styled imagery chosen for the map's density.
   */
  double scale_factor;
  /** One of mln_map_mode. Defaults to MLN_MAP_MODE_CONTINUOUS. */
  uint32_t map_mode;
  /**
   * Decodes MapLibre Tile (MLT) tiles whose integer streams use FastPFOR
   * encodings. Defaults to false.
   *
   * Enable this on maps that read vector sources created with
   * MLN_STYLE_VECTOR_TILE_ENCODING_MLT from a tile set that uses FastPFOR. It
   * is fixed for the lifetime of the map and applies to every MLT source the
   * map loads. A map created with this false decodes every other MLT encoding
   * and logs a tile parse warning for the FastPFOR ones.
   */
  bool fast_pfor_enabled;
} mln_map_options;
/** Geographic coordinate in degrees used by map and projection APIs. */
typedef struct mln_lat_lng {
  /** Latitude in degrees. Input latitude must be finite and within [-90, 90].
   */
  double latitude;
  /** Longitude in degrees. Input longitude must be finite. */
  double longitude;
} mln_lat_lng;
/** UTF-8 text view. The pointer may be null only when size is 0. */
typedef struct mln_string_view {
  /** UTF-8 bytes. Null only when size is 0. */
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_json_value mln_json_value;
typedef struct mln_geometry mln_geometry;
/** Geometry variant tags used by mln_geometry. */
typedef enum mln_geometry_type : uint32_t {
  MLN_GEOMETRY_TYPE_EMPTY = 0,
  MLN_GEOMETRY_TYPE_POINT = 1,
  MLN_GEOMETRY_TYPE_LINE_STRING = 2,
  MLN_GEOMETRY_TYPE_POLYGON = 3,
  MLN_GEOMETRY_TYPE_MULTI_POINT = 4,
  MLN_GEOMETRY_TYPE_MULTI_LINE_STRING = 5,
  MLN_GEOMETRY_TYPE_MULTI_POLYGON = 6,
  MLN_GEOMETRY_TYPE_GEOMETRY_COLLECTION = 7,
} mln_geometry_type;
/** Coordinate array view. Coordinates are latitude/longitude pairs. */
typedef struct mln_coordinate_span {
  /** Coordinates. Null only when coordinate_count is 0. */
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
/** Polygon ring array view. Each ring is a coordinate span. */
typedef struct mln_polygon_geometry {
  /** Rings. Null only when ring_count is 0. */
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
/** Multi-line geometry view. Each line is a coordinate span. */
typedef struct mln_multi_line_geometry {
  /** Lines. Null only when line_count is 0. */
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
/** Multi-polygon geometry view. Each polygon contains ring views. */
typedef struct mln_multi_polygon_geometry {
  /** Polygons. Null only when polygon_count is 0. */
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
/** Geometry collection view. */
typedef struct mln_geometry_collection {
  /** Child geometries. Null only when geometry_count is 0. */
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
/**
 * MapLibre geometry input descriptor graph.
 *
 * Geometry coordinates use mln_lat_lng for consistency with the rest of the C
 * API. They are converted to native geometry points as longitude/latitude.
 * A root geometry descriptor starts at nesting depth 0. Status-returning
 * functions reject geometry collection children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_geometry {
  uint32_t size;
  /** One of mln_geometry_type. */
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
/** JSON-like value variant tags used by mln_json_value. */
typedef enum mln_json_value_type : uint32_t {
  MLN_JSON_VALUE_TYPE_NULL = 0,
  MLN_JSON_VALUE_TYPE_BOOL = 1,
  MLN_JSON_VALUE_TYPE_UINT = 2,
  MLN_JSON_VALUE_TYPE_INT = 3,
  MLN_JSON_VALUE_TYPE_DOUBLE = 4,
  MLN_JSON_VALUE_TYPE_STRING = 5,
  MLN_JSON_VALUE_TYPE_ARRAY = 6,
  MLN_JSON_VALUE_TYPE_OBJECT = 7,
} mln_json_value_type;
/** JSON value array view. */
typedef struct mln_json_array {
  /** Values. Null only when value_count is 0. */
  const mln_json_value* values;
  size_t value_count;
} mln_json_array;
/** JSON object member view. */
typedef struct mln_json_member {
  mln_string_view key;
  /** Value descriptor. Must not be null. */
  const mln_json_value* value;
} mln_json_member;
/** JSON object member array view. */
typedef struct mln_json_object {
  /** Members. Null only when member_count is 0. */
  const mln_json_member* members;
  size_t member_count;
} mln_json_object;
/**
 * JSON-like value input descriptor graph used by feature properties/states.
 *
 * Input functions reject NaN and infinities for double values because JSON and
 * GeoJSON numbers are finite.
 * A root JSON value descriptor starts at nesting depth 0. Status-returning
 * functions reject array/object children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_json_value {
  uint32_t size;
  /** One of mln_json_value_type. */
  uint32_t type;
  union {
    bool bool_value;
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
    mln_json_array array_value;
    mln_json_object object_value;
  } data;
} mln_json_value;
/** GeoJSON variant tags used by mln_geojson. */
typedef enum mln_geojson_type : uint32_t {
  MLN_GEOJSON_TYPE_GEOMETRY = 1,
  MLN_GEOJSON_TYPE_FEATURE = 2,
  MLN_GEOJSON_TYPE_FEATURE_COLLECTION = 3,
} mln_geojson_type;
/** Geographic bounds in degrees. */
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;