include/maplibre_native_c/runtime.h

typedef struct mln_http_header_transform_response {
  uint32_t size;
  /** C API-managed callback context. Callback implementations leave unchanged.
   */
  void* context;
} mln_http_header_transform_response;
/**
 * Adds end-to-end headers to one outgoing HTTP request attempt.
 *
 * MapLibre invokes the callback synchronously on a worker or network thread
 * after resource URL transformation and immediately before the platform HTTP
 * transport starts the attempt. kind is one mln_resource_kind value and url is
 * the transformed URL that the transport will request.
 *
 * The callback and user_data must be thread-safe and remain valid until the
 * transform is replaced, cleared, or the runtime is destroyed. Those calls
 * wait for in-flight callbacks before returning. url and out_response are
 * borrowed for the callback duration. Callback implementations call only
 * mln_http_header_transform_response_set() and return promptly. A non-OK
 * result discards every header collected during the invocation and lets the
 * request proceed unchanged.
 */
typedef mln_status (*mln_http_header_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_http_header_transform_response* out_response
);
typedef struct mln_http_header_transform {
  uint32_t size;
  mln_http_header_transform_callback callback;
  void* user_data;
} mln_http_header_transform;