bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


enum mln_geojson_type {
  MLN_GEOJSON_TYPE_GEOMETRY(1),
  MLN_GEOJSON_TYPE_FEATURE(2),
  MLN_GEOJSON_TYPE_FEATURE_COLLECTION(3);

  final int value;
  const mln_geojson_type(this.value);

  static mln_geojson_type fromValue(int value) => switch (value) {
    1 => MLN_GEOJSON_TYPE_GEOMETRY,
    2 => MLN_GEOJSON_TYPE_FEATURE,
    3 => MLN_GEOJSON_TYPE_FEATURE_COLLECTION,
    _ => throw ArgumentError('Unknown value for mln_geojson_type: $value'),
  };
}

final class mln_geometry extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int type;

  external UnnamedUnion$2 data;
}

final class mln_geometry_collection extends ffi.Struct {
  external ffi.Pointer<mln_geometry> geometries;

  @ffi.Size()
  external int geometry_count;

  static ffi.Pointer<mln_geometry_collection> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_geometry> geometries,
    required int geometry_count,
  }) => $allocator<mln_geometry_collection>()
    ..ref.geometries = geometries
    ..ref.geometry_count = geometry_count;
}

enum mln_geometry_type {
  MLN_GEOMETRY_TYPE_EMPTY(0),
  MLN_GEOMETRY_TYPE_POINT(1),
  MLN_GEOMETRY_TYPE_LINE_STRING(2),
  MLN_GEOMETRY_TYPE_POLYGON(3),
  MLN_GEOMETRY_TYPE_MULTI_POINT(4),
  MLN_GEOMETRY_TYPE_MULTI_LINE_STRING(5),
  MLN_GEOMETRY_TYPE_MULTI_POLYGON(6),
  MLN_GEOMETRY_TYPE_GEOMETRY_COLLECTION(7);

  final int value;
  const mln_geometry_type(this.value);

  static mln_geometry_type fromValue(int value) => switch (value) {
    0 => MLN_GEOMETRY_TYPE_EMPTY,
    1 => MLN_GEOMETRY_TYPE_POINT,
    2 => MLN_GEOMETRY_TYPE_LINE_STRING,
    3 => MLN_GEOMETRY_TYPE_POLYGON,
    4 => MLN_GEOMETRY_TYPE_MULTI_POINT,
    5 => MLN_GEOMETRY_TYPE_MULTI_LINE_STRING,
    6 => MLN_GEOMETRY_TYPE_MULTI_POLYGON,
    7 => MLN_GEOMETRY_TYPE_GEOMETRY_COLLECTION,
    _ => throw ArgumentError('Unknown value for mln_geometry_type: $value'),
  };
}

final class mln_http_header_transform extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external mln_http_header_transform_callback callback;

  external ffi.Pointer<ffi.Void> user_data;

  static ffi.Pointer<mln_http_header_transform> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required mln_http_header_transform_callback callback,
    required ffi.Pointer<ffi.Void> user_data,
  }) => $allocator<mln_http_header_transform>()
    ..ref.size = size
    ..ref.callback = callback
    ..ref.user_data = user_data;
}

typedef mln_http_header_transform_callback =
    ffi.Pointer<ffi.NativeFunction<mln_http_header_transform_callbackFunction>>;
typedef mln_http_header_transform_callbackFunction =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Uint32 kind,
      ffi.Pointer<ffi.Char> url,
      ffi.Pointer<mln_http_header_transform_response> out_response,
    );
typedef Dartmln_http_header_transform_callbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> user_data,
      int kind,
      ffi.Pointer<ffi.Char> url,
      ffi.Pointer<mln_http_header_transform_response> out_response,
    );

final class mln_http_header_transform_response extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<ffi.Void> context;

  static ffi.Pointer<mln_http_header_transform_response> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required ffi.Pointer<ffi.Void> context,
  }) => $allocator<mln_http_header_transform_response>()
    ..ref.size = size
    ..ref.context = context;
}

final class mln_image_content extends ffi.Struct {
  @ffi.Float()
  external double left;

  @ffi.Float()
  external double top;

  @ffi.Float()
  external double right;

  @ffi.Float()
  external double bottom;

  static ffi.Pointer<mln_image_content> $allocate(
    ffi.Allocator $allocator, {
    required double left,
    required double top,
    required double right,
    required double bottom,
  }) => $allocator<mln_image_content>()
    ..ref.left = left
    ..ref.top = top
    ..ref.right = right
    ..ref.bottom = bottom;
}

final class mln_image_stretch extends ffi.Struct {
  @ffi.Float()
  external double from;

  @ffi.Float()
  external double to;

  static ffi.Pointer<mln_image_stretch> $allocate(
    ffi.Allocator $allocator, {
    required double from,
    required double to,
  }) => $allocator<mln_image_stretch>()
    ..ref.from = from
    ..ref.to = to;
}

final class mln_json_array extends ffi.Struct {
  external ffi.Pointer<mln_json_value> values;

  @ffi.Size()
  external int value_count;

  static ffi.Pointer<mln_json_array> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_json_value> values,
    required int value_count,
  }) => $allocator<mln_json_array>()
    ..ref.values = values
    ..ref.value_count = value_count;
}

final class mln_json_member extends ffi.Struct {
  external mln_string_view key;

  external ffi.Pointer<mln_json_value> value;
}

final class mln_json_object extends ffi.Struct {
  external ffi.Pointer<mln_json_member> members;

  @ffi.Size()
  external int member_count;

  static ffi.Pointer<mln_json_object> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<mln_json_member> members,
    required int member_count,
  }) => $allocator<mln_json_object>()
    ..ref.members = members
    ..ref.member_count = member_count;
}

typedef mln_json_snapshot = ffi.Uint64;
typedef Dartmln_json_snapshot = int;

final class mln_json_value extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int type;

  external UnnamedUnion$1 data;
}

enum mln_json_value_type {
  MLN_JSON_VALUE_TYPE_NULL(0),
  MLN_JSON_VALUE_TYPE_BOOL(1),
  MLN_JSON_VALUE_TYPE_UINT(2),
  MLN_JSON_VALUE_TYPE_INT(3),
  MLN_JSON_VALUE_TYPE_DOUBLE(4),
  MLN_JSON_VALUE_TYPE_STRING(5),
  MLN_JSON_VALUE_TYPE_ARRAY(6),
  MLN_JSON_VALUE_TYPE_OBJECT(7);

  final int value;
  const mln_json_value_type(this.value);

  static mln_json_value_type fromValue(int value) => switch (value) {
    0 => MLN_JSON_VALUE_TYPE_NULL,
    1 => MLN_JSON_VALUE_TYPE_BOOL,
    2 => MLN_JSON_VALUE_TYPE_UINT,
    3 => MLN_JSON_VALUE_TYPE_INT,
    4 => MLN_JSON_VALUE_TYPE_DOUBLE,
    5 => MLN_JSON_VALUE_TYPE_STRING,
    6 => MLN_JSON_VALUE_TYPE_ARRAY,
    7 => MLN_JSON_VALUE_TYPE_OBJECT,
    _ => throw ArgumentError('Unknown value for mln_json_value_type: $value'),
  };
}

final class mln_lat_lng extends ffi.Struct {
  @ffi.Double()
  external double latitude;

  @ffi.Double()
  external double longitude;

  static ffi.Pointer<mln_lat_lng> $allocate(
    ffi.Allocator $allocator, {
    required double latitude,
    required double longitude,
  }) => $allocator<mln_lat_lng>()
    ..ref.latitude = latitude
    ..ref.longitude = longitude;
}

final class mln_lat_lng_bounds extends ffi.Struct {
  external mln_lat_lng southwest;

  external mln_lat_lng northeast;
}

enum mln_location_indicator_image_kind {
  MLN_LOCATION_INDICATOR_IMAGE_KIND_TOP(0),
  MLN_LOCATION_INDICATOR_IMAGE_KIND_BEARING(1),
  MLN_LOCATION_INDICATOR_IMAGE_KIND_SHADOW(2);

  final int value;
  const mln_location_indicator_image_kind(this.value);

  static mln_location_indicator_image_kind fromValue(int value) =>
      switch (value) {
        0 => MLN_LOCATION_INDICATOR_IMAGE_KIND_TOP,
        1 => MLN_LOCATION_INDICATOR_IMAGE_KIND_BEARING,
        2 => MLN_LOCATION_INDICATOR_IMAGE_KIND_SHADOW,
        _ => throw ArgumentError(
          'Unknown value for mln_location_indicator_image_kind: $value',
        ),
      };
}

typedef mln_log_callback =
    ffi.Pointer<ffi.NativeFunction<mln_log_callbackFunction>>;
typedef mln_log_callbackFunction =
    ffi.Uint32 Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Uint32 severity,
      ffi.Uint32 event,
      ffi.Int64 code,
      ffi.Pointer<ffi.Char> message,
    );
typedef Dartmln_log_callbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> user_data,
      int severity,
      int event,
      int code,
      ffi.Pointer<ffi.Char> message,
    );

enum mln_log_event {
  MLN_LOG_EVENT_GENERAL(0),
  MLN_LOG_EVENT_SETUP(1),
  MLN_LOG_EVENT_SHADER(2),
  MLN_LOG_EVENT_PARSE_STYLE(3),
  MLN_LOG_EVENT_PARSE_TILE(4),
  MLN_LOG_EVENT_RENDER(5),
  MLN_LOG_EVENT_STYLE(6),
  MLN_LOG_EVENT_DATABASE(7),
  MLN_LOG_EVENT_HTTP_REQUEST(8),
  MLN_LOG_EVENT_SPRITE(9),
  MLN_LOG_EVENT_IMAGE(10),
  MLN_LOG_EVENT_OPENGL(11),
  MLN_LOG_EVENT_JNI(12),
  MLN_LOG_EVENT_ANDROID(13),
  MLN_LOG_EVENT_CRASH(14),
  MLN_LOG_EVENT_GLYPH(15),
  MLN_LOG_EVENT_TIMING(16);

  final int value;
  const mln_log_event(this.value);

  static mln_log_event fromValue(int value) => switch (value) {
    0 => MLN_LOG_EVENT_GENERAL,
    1 => MLN_LOG_EVENT_SETUP,
    2 => MLN_LOG_EVENT_SHADER,
    3 => MLN_LOG_EVENT_PARSE_STYLE,
    4 => MLN_LOG_EVENT_PARSE_TILE,
    5 => MLN_LOG_EVENT_RENDER,
    6 => MLN_LOG_EVENT_STYLE,
    7 => MLN_LOG_EVENT_DATABASE,
    8 => MLN_LOG_EVENT_HTTP_REQUEST,
    9 => MLN_LOG_EVENT_SPRITE,
    10 => MLN_LOG_EVENT_IMAGE,
    11 => MLN_LOG_EVENT_OPENGL,
    12 => MLN_LOG_EVENT_JNI,
    13 => MLN_LOG_EVENT_ANDROID,
    14 => MLN_LOG_EVENT_CRASH,
    15 => MLN_LOG_EVENT_GLYPH,
    16 => MLN_LOG_EVENT_TIMING,
    _ => throw ArgumentError('Unknown value for mln_log_event: $value'),
  };
}

enum mln_log_severity {
  MLN_LOG_SEVERITY_INFO(1),
  MLN_LOG_SEVERITY_WARNING(2),
  MLN_LOG_SEVERITY_ERROR(3);

  final int value;
  const mln_log_severity(this.value);

  static mln_log_severity fromValue(int value) => switch (value) {
    1 => MLN_LOG_SEVERITY_INFO,
    2 => MLN_LOG_SEVERITY_WARNING,
    3 => MLN_LOG_SEVERITY_ERROR,
    _ => throw ArgumentError('Unknown value for mln_log_severity: $value'),
  };
}

enum mln_log_severity_mask {
  MLN_LOG_SEVERITY_MASK_INFO(2),
  MLN_LOG_SEVERITY_MASK_WARNING(4),
  MLN_LOG_SEVERITY_MASK_ERROR(8),
  MLN_LOG_SEVERITY_MASK_DEFAULT(6),
  MLN_LOG_SEVERITY_MASK_ALL(14);

  final int value;
  const mln_log_severity_mask(this.value);

  static mln_log_severity_mask fromValue(int value) => switch (value) {
    2 => MLN_LOG_SEVERITY_MASK_INFO,
    4 => MLN_LOG_SEVERITY_MASK_WARNING,
    8 => MLN_LOG_SEVERITY_MASK_ERROR,
    6 => MLN_LOG_SEVERITY_MASK_DEFAULT,
    14 => MLN_LOG_SEVERITY_MASK_ALL,
    _ => throw ArgumentError('Unknown value for mln_log_severity_mask: $value'),
  };
}

typedef mln_map = ffi.Uint64;
typedef Dartmln_map = int;

enum mln_map_debug_option {
  MLN_MAP_DEBUG_TILE_BORDERS(2),
  MLN_MAP_DEBUG_PARSE_STATUS(4),
  MLN_MAP_DEBUG_TIMESTAMPS(8),
  MLN_MAP_DEBUG_COLLISION(16),
  MLN_MAP_DEBUG_OVERDRAW(32),
  MLN_MAP_DEBUG_STENCIL_CLIP(64),
  MLN_MAP_DEBUG_DEPTH_BUFFER(128);

  final int value;
  const mln_map_debug_option(this.value);

  static mln_map_debug_option fromValue(int value) => switch (value) {
    2 => MLN_MAP_DEBUG_TILE_BORDERS,
    4 => MLN_MAP_DEBUG_PARSE_STATUS,
    8 => MLN_MAP_DEBUG_TIMESTAMPS,
    16 => MLN_MAP_DEBUG_COLLISION,
    32 => MLN_MAP_DEBUG_OVERDRAW,
    64 => MLN_MAP_DEBUG_STENCIL_CLIP,
    128 => MLN_MAP_DEBUG_DEPTH_BUFFER,
    _ => throw ArgumentError('Unknown value for mln_map_debug_option: $value'),
  };
}

enum mln_map_mode {
  MLN_MAP_MODE_CONTINUOUS(0),
  MLN_MAP_MODE_STATIC(1),
  MLN_MAP_MODE_TILE(2);

  final int value;
  const mln_map_mode(this.value);

  static mln_map_mode fromValue(int value) => switch (value) {
    0 => MLN_MAP_MODE_CONTINUOUS,
    1 => MLN_MAP_MODE_STATIC,
    2 => MLN_MAP_MODE_TILE,
    _ => throw ArgumentError('Unknown value for mln_map_mode: $value'),
  };
}

final class mln_map_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Double()
  external double scale_factor;

  @ffi.Uint32()
  external int map_mode;

  @ffi.Bool()
  external bool fast_pfor_enabled;
